# qa_guru_8.18

./: README.md  pyproject.toml
